2008-10-05  Heikki Junnila  <hjunnila@users.sf.net>

	* main/app.cpp

	Fixed application background restoration during startup.
	
2008-10-05  Heikki Junnila  <hjunnila@users.sf.net>

	* main/app.cpp
	* main/app.h
	* main/main.pro
	* main/pluginmanager.cpp
	* main/pluginmanager.h

	Removed plugin manager.
	Added input/output manager closing when going to operate mode.
	
2008-10-05  Heikki Junnila  <hjunnila@users.sf.net>

	* libs/common/qlcinplugin.h
	* libs/hidinput/hidinput.cpp
	* libs/hidinput/hidinput.h
	* libs/libs.pro
	* libs/midiinput/unix-midiinput.cpp
	* libs/midiinput/unix-midiinput.h
	* libs/midiinput/win32-midiinput.cpp
	* libs/midiinput/win32-midiinput.h
	* main/inputmanager.cpp
	* main/inputmap.cpp
	* main/inputmap.h
	* main/inputpatcheditor.cpp
	* main/inputpatcheditor.h
	* main/inputpatcheditor.ui

	Implemented the same kind of status info scheme to input plugins as
	output plugins.
	
2008-10-04  Heikki Junnila  <hjunnila@users.sf.net>

	* libs/llaout/llaout.cpp:
	* libs/llaout/llaout.h:
	* libs/usbdmxout/configureusbdmxout.cpp:
	* libs/usbdmxout/configureusbdmxout.h:
	* libs/usbdmxout/configureusbdmxout.ui:
	* libs/usbdmxout/usbdmxdevice-unix.cpp:
	* libs/usbdmxout/usbdmxdevice-unix.h:
	* libs/usbdmxout/usbdmxout-unix.cpp:
	* libs/usbdmxout/usbdmxout-unix.h:
	* main/dummyoutplugin.cpp:
	* main/inputmap.cpp:
	* main/outputmanager.cpp:
	* main/outputmanager.ui:
	* main/outputpatcheditor.cpp:
	* main/outputpatcheditor.h:
	* main/outputpatcheditor.ui:

	Fixed things to compile and work on unix.
	Implemented output patch editor's configure button.
	
2008-10-04  Heikki Junnila  <hjunnila@users.sf.net>

	* libs/dmx4linuxout/dmx4linuxout.cpp
	* libs/libs.pro
	* libs/llaout/llaout.cpp
	* libs/llaout/llaout.h
	* libs/usbdmxout/usbdmxdevice-win32.cpp
	* libs/usbdmxout/usbdmxout-unix.cpp
	* libs/usbdmxout/usbdmxout-win32.cpp
	* main/dummyoutplugin.cpp
	* main/outputmap.cpp
	* main/outputmap.h
	* main/outputpatcheditor.cpp
	* main/outputpatcheditor.ui
