@@ -39,54 +39,19 @@
 #define KColumnPlugin   1
 #define KColumnInput    2
 #define KColumnInputNum 3
+#define KColumnTemplate 4
 
 extern App* _app;
 
 InputManager::InputManager(QWidget* parent) : QWidget(parent)
 {
-	Q_ASSERT(_app->inputMap() != NULL);
-
 	setupUi(this);
 
 	connect(m_edit, SIGNAL(clicked()), this, SLOT(slotEditClicked()));
 	connect(m_tree, SIGNAL(itemDoubleClicked(QTreeWidgetItem*,int)),
 		this, SLOT(slotEditClicked()));
-
-	/* Clear the mapping list just in case and fill with plugins */
-	m_tree->clear();
-	for (t_input_universe i = 0; i < _app->inputMap()->universes(); i++)
-	{
-		QTreeWidgetItem* item;
-		InputPatch* inputPatch;
-		QString str;
 		
-		inputPatch = _app->inputMap()->patch(i);
-		Q_ASSERT(inputPatch != NULL);
-		
-		item = new QTreeWidgetItem(m_tree);
-		item->setText(KColumnUniverse, str.setNum(i + 1));
-
-		/* Plugin name */
-		if (inputPatch->plugin() != NULL &&
-		    inputPatch->input() != KInputInvalid)
-		{
-			/* Plugin name */
-			item->setText(KColumnPlugin, inputPatch->pluginName());
-
-			/* Plugin's input name */
-			item->setText(KColumnInput, inputPatch->inputName());
-
-			/* Plugin's input number */
-			item->setText(KColumnInputNum,
-				      str.setNum(inputPatch->input() + 1));
-		}
-		else
-		{
-			item->setText(KColumnPlugin, KInputNone);
-			item->setText(KColumnInput, KInputNone);
-			item->setText(KColumnInputNum, KInputNone);
-		}
-	}
+	fillTree();
 }
 
 InputManager::~InputManager()
@@ -97,45 +62,83 @@ InputManager::~InputManager()
  * Tree widget
  *****************************************************************************/
 
+void InputManager::fillTree()
+{
+	/* Clear the mapping list just in case and fill with plugins */
+	m_tree->clear();
+	for (t_input_universe i = 0; i < _app->inputMap()->universes(); i++)
+	{
+		InputPatch* inputPatch;
+		QTreeWidgetItem* item;
+
+		inputPatch = _app->inputMap()->patch(i);
+		Q_ASSERT(inputPatch != NULL);
+
+		item = new QTreeWidgetItem(m_tree);
+		updateItem(item, inputPatch, i);
+	}
+}
+
+void InputManager::updateItem(QTreeWidgetItem* item, InputPatch* inputPatch,
+			      t_input_universe universe)
+{
+	Q_ASSERT(item != NULL);
+	Q_ASSERT(inputPatch != NULL);
+
+	/* Universe */
+	item->setText(KColumnUniverse, QString("%1").arg(universe + 1));
+
+	/* Plugin name */
+	if (inputPatch->plugin() != NULL &&
+	    inputPatch->input() != KInputInvalid)
+	{
+		/* Plugin name */
+		item->setText(KColumnPlugin, inputPatch->pluginName());
+
+		/* Plugin's input name */
+		item->setText(KColumnInput, inputPatch->inputName());
+
+		/* Plugin's input number */
+		item->setText(KColumnInputNum,
+			      QString("%1").arg(inputPatch->input() + 1));
+
+		/* Device template */
+		item->setText(KColumnTemplate,
+			      inputPatch->deviceTemplateName());
+	}
+	else
+	{
+		item->setText(KColumnPlugin, KInputNone);
+		item->setText(KColumnInput, KInputNone);
+		item->setText(KColumnInputNum, KInputNone);
+		item->setText(KColumnTemplate, KInputNone);
+	}
+}
+ 
 void InputManager::slotEditClicked()
 {
+	t_input_universe universe;
+	InputPatch* inputPatch;
 	QTreeWidgetItem* item;
-	int universe;
-	QString pluginName;
-	int input;
 
 	item = m_tree->currentItem();
 	if (item == NULL)
 		return;
 
 	universe = item->text(KColumnUniverse).toInt() - 1;
-	pluginName = item->text(KColumnPlugin);
-	input = item->text(KColumnInputNum).toInt() - 1;
-
-	InputPatchEditor ipe(this, universe, pluginName, input);
+	inputPatch = _app->inputMap()->patch(universe);
+	Q_ASSERT(inputPatch != NULL);
+	
+	InputPatchEditor ipe(this, universe, inputPatch->pluginName(),
+			     inputPatch->input());
 	if (ipe.exec() == QDialog::Accepted)
 	{
-		QString str;
-		item->setText(KColumnUniverse, str.setNum(universe + 1));
 		if (ipe.pluginName() != KInputNone &&
 		    ipe.pluginName().isEmpty() == false)
 		{
-			item->setText(KColumnPlugin, ipe.pluginName());
-			item->setText(KColumnInput, ipe.inputName());
-			item->setText(KColumnInputNum,
-				      str.setNum(ipe.input() + 1));
-
 			_app->inputMap()->setPatch(universe, ipe.pluginName(),
 						   ipe.input());
-		}
-		else
-		{
-			item->setText(KColumnPlugin, KInputNone);
-			item->setText(KColumnInput, KInputNone);
-			item->setText(KColumnInputNum, KInputNone);
-
-			_app->inputMap()->setPatch(universe, QString::null,
-						   KInputInvalid);
+			updateItem(item, inputPatch, universe);
 		}
 	}
 }
