@@ -42,6 +42,11 @@
        <string>Input</string>
       </property>
      </column>
+     <column>
+      <property name="text" >
+       <string>Template</string>
+      </property>
+     </column>
     </widget>
    </item>
    <item row="1" column="0" >
