@@ -6,7 +6,7 @@
     <x>0</x>
     <y>0</y>
     <width>521</width>
-    <height>410</height>
+    <height>466</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -16,7 +16,7 @@
    <item>
     <widget class="QGroupBox" name="m_mappingGroup" >
      <property name="sizePolicy" >
-      <sizepolicy vsizetype="Preferred" hsizetype="Preferred" >
+      <sizepolicy vsizetype="Expanding" hsizetype="Preferred" >
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
@@ -39,12 +39,25 @@
    </item>
    <item>
     <widget class="QGroupBox" name="m_infoGroup" >
+     <property name="sizePolicy" >
+      <sizepolicy vsizetype="Maximum" hsizetype="Preferred" >
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="title" >
       <string>Input Information</string>
      </property>
      <layout class="QGridLayout" name="gridLayout_2" >
       <item rowspan="2" row="0" column="0" >
-       <widget class="QTextBrowser" name="m_infoBrowser" />
+       <widget class="QTextBrowser" name="m_infoBrowser" >
+        <property name="sizePolicy" >
+         <sizepolicy vsizetype="Ignored" hsizetype="Expanding" >
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+       </widget>
       </item>
       <item row="0" column="1" >
        <widget class="QToolButton" name="m_configureButton" >
@@ -76,12 +89,15 @@
        </spacer>
       </item>
      </layout>
+     <zorder>m_infoBrowser</zorder>
+     <zorder>m_configureButton</zorder>
+     <zorder>m_deviceCombo</zorder>
     </widget>
    </item>
    <item>
     <widget class="QGroupBox" name="m_deviceGroup" >
      <property name="sizePolicy" >
-      <sizepolicy vsizetype="Preferred" hsizetype="Preferred" >
+      <sizepolicy vsizetype="Maximum" hsizetype="Preferred" >
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
@@ -97,22 +113,6 @@
         </property>
         <property name="whatsThis" >
          <string/>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QToolButton" name="m_configureDevicesButton" >
-        <property name="toolTip" >
-         <string>Configure device templates</string>
-        </property>
-        <property name="text" >
-         <string>...</string>
-        </property>
-        <property name="iconSize" >
-         <size>
-          <width>26</width>
-          <height>26</height>
-         </size>
         </property>
        </widget>
       </item>
